--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ page.title }}</title>
+    <!-- bootstrap読み込み -->
+    <link rel="stylesheet" href="assets/themes/css/bootstrap.min.css">
     <!-- CSS読み込み -->
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/{{ page.title | downcase }}.css">
@@ -12,6 +14,9 @@
 </head>
 <body>
     {{ content }}
+    <!-- bootstrap読み込み -->
+    <script src="assets/themes/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/themes/js/bootstrap.bundle.min.js"></script>
     <!-- JS読み込み -->
     <script src="assets/js/default.js"></script>
     <script src="assets/js/{{ page.title | downcase }}.js"></script>
