--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ page.title }}</title>
+    <title>さくら組 | {{ page.title }}</title>
     <!-- bootstrap読み込み -->
     <link rel="stylesheet" href="assets/themes/css/bootstrap.min.css">
     <!-- CSS読み込み -->
@@ -13,10 +13,84 @@
     <!--  -->
 </head>
 <body>
-    {{ content }}
+    <div class="layout">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+            <a class="navbar-brand" href="/">
+                <img
+                    src="https://github.com/sakuraJunior/new_homepage/raw/master/assets/img/sakuragumiTitle.svg?sanitize=true">
+                <div class="navTitle">
+                    FLLチームさくら組
+                    <br>
+                    ホームページ
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-column" id="navbarSupportedContent">
+                <hr>
+                <ul class="navbar-nav d-lg-block">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">概要</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/member">メンバー</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/project">プロジェクト</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/robot">ロボット</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/program">プログラム</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/corevalue">コアバリュー</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/blog">ブログ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">お問い合わせ</a>
+                    </li>
+                </ul>
+                <hr>
+                <ul class="navbar-nav d-lg-block">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://japan-open-2020.sakuragumi.tk" target="_blank">PointTable2020
+                            <i class="fas fa-external-link-alt"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://firstjapan.jp/" target="_blank">FIRSTJAPAN <i
+                                class="fas fa-external-link-alt"></i></a>
+                    </li>
+                </ul>
+                <hr>
+                <footer>
+                    <div id="social">
+                        <a href="https://www.youtube.com/channel/UCcaOPQsuxH0yYShGJi8RESg"><i
+                                class="fab fa-youtube"></i></a>
+                        <a href="https://twitter.com/fll_sakuragumi"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/sakurajunior"><i class="fab fa-github"></i></a>
+                        <a href="mailto:fll_sakuragumi@gmail.com"><i class="fas fa-envelope"></i></a>
+                    </div>
+                    <small>(c)さくら組2020</small>
+                </footer>
+            </div>
+        </nav>
+        <main>
+            <div class="container">
+                {{ content }}
+            </div>
+        </main>
+    </div>
     <!-- bootstrap読み込み -->
     <script src="assets/themes/js/jquery-3.4.1.min.js"></script>
     <script src="assets/themes/js/bootstrap.bundle.min.js"></script>
+    <!-- fontawesome読み込み -->
+    <script src="https://kit.fontawesome.com/3d3df0e672.js" crossorigin="anonymous"></script>
     <!-- JS読み込み -->
     <script src="assets/js/default.js"></script>
     <script src="assets/js/{{ page.title | downcase }}.js"></script>
