--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
                         <a href="https://github.com/sakurajunior"><i class="fab fa-github"></i></a>
                         <a href="mailto:fll_sakuragumi@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
-                    <small>(c)さくら組2020</small>
+                    <small>Copyright © 2020 さくら組</small>
                 </footer>
             </div>
         </nav>
