socialを別タブで開くようにした

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,11 +70,11 @@
                 <hr>
                 <footer>
                     <div id="social">
-                        <a href="https://www.youtube.com/channel/UCcaOPQsuxH0yYShGJi8RESg"><i
+                        <a href="https://www.youtube.com/channel/UCcaOPQsuxH0yYShGJi8RESg"  target="_blank"><i
                                 class="fab fa-youtube"></i></a>
-                        <a href="https://twitter.com/fll_sakuragumi"><i class="fab fa-twitter"></i></a>
-                        <a href="https://github.com/sakurajunior"><i class="fab fa-github"></i></a>
-                        <a href="mailto:fll_sakuragumi@gmail.com"><i class="fas fa-envelope"></i></a>
+                        <a href="https://twitter.com/fll_sakuragumi" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/sakurajunior" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="mailto:fll_sakuragumi@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                     </div>
                     <small>Copyright © 2020 さくら組</small>
                 </footer>
