--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -7,7 +7,10 @@
     border-bottom: 2px solid #000;
     background-color: white;
 }
-
+footer small {
+    font-weight: bold;
+    color: rgba(0,0,0,.5);
+}
 .navbar-brand br {
     display: none;
 }
