--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <a class="navbar-brand" href="/">
                 <img
-                    src="https://github.com/sakuraJunior/new_homepage/raw/master/assets/img/sakuragumiTitle.svg?sanitize=true">
+                    src="assets/img/sakuragumiTitle.svg">
                 <div class="navTitle">
                     FLLチームさくら組
                     <br>
@@ -58,6 +58,7 @@
             </div>
         </nav>
         <main>
+            <img src="assets/img/top.jpg">
             <div class="container">
                 {{ content }}
             </div>
