--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -74,7 +74,7 @@ footer small {
         width: calc(100vw - 264px);
     }
     .container {
-        max-width: calc(720px - 264px);
+        max-width: calc(900px - 264px);
     }
 }
 @media (min-width: 1200px) {
@@ -86,4 +86,7 @@ footer small {
 h1, h2, h3, h4, h5 {
     margin-block-start: 0.67em;
     font-weight: bold;
+}
+main > img {
+    width: 100%;
 }
