--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -8,6 +8,9 @@
     flex-wrap: nowrap;
     background-color: white;
 }
+.navbar-collapse {
+    align-items: unset!important;
+}
 .navbar img {
     width: 50%;
 }
