Update top image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
             </div>
         </nav>
         <main>
-            <img src="assets/img/top.jpg">
+            <img src="assets/img/top.png">
             <div class="container">
                 {{ content }}
             </div>
